Bug 503067 - New warnings from HTML5 parser: suggest parentheses around assignment used as truth value. r=benjamin